# object-oriented-programming-python

./: README.md  pyproject.toml  test_python_oop.ipynb
1.Classes and Objects/: 1.objects.py  2.define_attributes_in_classes.py  3.callable_class_attributes.py  4.Instance_method_vs_functions.py.py
